home-cluster/media/qbittorrent/service/service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tcp-service
  namespace: home-media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-webui
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: qbittorrent-tcp
      protocol: TCP
      port: 6881
      targetPort: 6881
