home-cluster/media/qbittorrent/service/service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-udp-service
  namespace: home-media
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-udp
      protocol: UDP
      port: 6881
      targetPort: 6881
