home-cluster/media/qbittorrent/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: home-media
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-webui
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: qbittorrent-tcp
      protocol: TCP
      port: 6881
      targetPort: 6881
    - name: qbittorrent-udp
      protocol: UDP
      port: 6881
      targetPort: 6881
